force-app/main/default/objects/bdrs__WorkControl__c/bdrs__WorkControl__c.object-meta.xml
<CustomObject>
    <label>Work Control</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Controls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>