force-app/main/default/objects/bdrs__WorkControl__c/fields/bdrs__Attempts__c.field-meta.xml
<CustomField>
    <fullName>bdrs__Attempts__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>