force-app/main/default/objects/bdrs__WorkControl__c/fields/bdrs__Content__c.field-meta.xml
<CustomField>
    <fullName>bdrs__Content__c</fullName>
    <label>Content</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>