force-app/main/default/objects/bdrs__WorkControl__c/fields/bdrs__Exception__c.field-meta.xml
<CustomField>
    <fullName>bdrs__Exception__c</fullName>
    <label>Exception</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>