force-app/main/default/objects/bdrs__WorkControl__c/fields/bdrs__Priority__c.field-meta.xml
<CustomField>
    <fullName>bdrs__Priority__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Priority</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>