force-app/main/default/objects/bdrs__WorkControl__c/fields/bdrs__Response__c.field-meta.xml
<CustomField>
    <fullName>bdrs__Response__c</fullName>
    <label>Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>