force-app/main/default/objects/bdrs__WorkControl__c/fields/bdrs__ScheduledTime__c.field-meta.xml
<CustomField>
    <fullName>bdrs__ScheduledTime__c</fullName>
    <label>Scheduled Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>