force-app/main/default/objects/bdrs__WorkControl__c/fields/bdrs__Status__c.field-meta.xml
<CustomField>
    <fullName>bdrs__Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Pending Reprocessing</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>