force-app/main/default/objects/bdrs__WorkControl__c/fields/bdrs__TotalMinutes__c.field-meta.xml
<CustomField>
    <fullName>bdrs__TotalMinutes__c</fullName>
    <formula>ROUND((LastModifiedDate - bdrs__ScheduledTime__c) * 24 * 60, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>