force-app/main/default/objects/bdrs__WorkControl__c/fields/bdrs__Work__c.field-meta.xml
<CustomField>
    <fullName>bdrs__Work__c</fullName>
    <externalId>true</externalId>
    <label>Work</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>