force-app/main/default/objects/bdrs__WorkControl__c/recordTypes/bdrs__Inbound.recordType-meta.xml
<RecordType>
    <fullName>bdrs__Inbound</fullName>
    <active>true</active>
    <label>Inbound</label>
</RecordType>