force-app/main/default/objects/bdrs__WorkControl__c/recordTypes/bdrs__Outbound.recordType-meta.xml
<RecordType>
    <fullName>bdrs__Outbound</fullName>
    <active>true</active>
    <label>Outbound</label>
</RecordType>