force-app/main/default/objects/bdrs__WorkControl__c/listViews/bdrs__All.listView-meta.xml
<ListView>
    <fullName>bdrs__All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>bdrs__ScheduledTime__c</columns>
    <columns>bdrs__Work__c</columns>
    <columns>bdrs__Status__c</columns>
    <columns>bdrs__Priority__c</columns>
    <columns>bdrs__Attempts__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>bdrs__Content__c</columns>
    <columns>bdrs__Exception__c</columns>
    <columns>bdrs__Response__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>